<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvCalculatorToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:padding="@dimen/dp_10"
        android:text="@string/calculator_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_26"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etTextBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCalculatorToolBar"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_15"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/black"
        android:textDirection="rtl"
        android:textSize="@dimen/sp_40" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etTextBar"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_80">

        <Button
            android:id="@+id/btnOne"
            style="@style/ButtonDesign"
            android:background="@android:color/white"
            android:text="@string/one_text" />

        <Button
            android:id="@+id/btnTwo"
            style="@style/ButtonDesign"
            android:layout_toRightOf="@+id/btnOne"
            android:background="@android:color/white"
            android:text="@string/two_text" />

        <Button
            android:id="@+id/btnThree"
            style="@style/ButtonDesign"
            android:layout_toRightOf="@+id/btnTwo"
            android:background="@android:color/white"
            android:text="@string/three_text" />

        <Button
            android:id="@+id/btnFour"
            style="@style/ButtonDesign"
            android:layout_below="@+id/btnOne"
            android:background="@android:color/white"
            android:text="@string/four_text" />

        <Button
            android:id="@+id/btnFive"
            style="@style/ButtonDesign"
            android:layout_below="@+id/btnTwo"
            android:layout_toRightOf="@id/btnFour"
            android:background="@android:color/white"
            android:text="@string/five_text" />

        <Button
            android:id="@+id/btnSix"
            style="@style/ButtonDesign"
            android:layout_below="@+id/btnThree"
            android:layout_toRightOf="@id/btnFive"
            android:background="@android:color/white"
            android:text="@string/six_text" />

        <Button
            android:id="@+id/btnSeven"
            style="@style/ButtonDesign"
            android:layout_below="@+id/btnFour"
            android:background="@android:color/white"
            android:text="@string/seven_text" />

        <Button
            android:id="@+id/btnEight"
            style="@style/ButtonDesign"
            android:layout_below="@+id/btnFive"
            android:layout_toRightOf="@id/btnSeven"
            android:background="@android:color/white"
            android:text="@string/eight_text" />

        <Button
            android:id="@+id/btnNine"
            style="@style/ButtonDesign"
            android:layout_below="@+id/btnSix"
            android:layout_toRightOf="@id/btnEight"
            android:background="@android:color/white"
            android:text="@string/nine_text" />

        <Button
            android:id="@+id/btnDecimal"
            style="@style/ButtonDesign"
            android:layout_below="@+id/btnSeven"
            android:background="@android:color/white"
            android:text="@string/decimal" />

        <Button
            android:id="@+id/btnZero"
            style="@style/ButtonDesign"
            android:layout_below="@+id/btnEight"
            android:layout_toRightOf="@id/btnDecimal"
            android:background="@android:color/white"
            android:text="@string/zero_text" />

        <Button
            android:id="@+id/btnModulus"
            style="@style/ButtonDesign"
            android:layout_below="@+id/btnNine"
            android:layout_toRightOf="@id/btnZero"
            android:background="@android:color/white"
            android:text="@string/modulus"
            android:textColor="@android:color/holo_blue_dark" />

        <Button
            android:id="@+id/btnPower"
            style="@style/ButtonDesign"
            android:layout_below="@+id/btnModulus"
            android:layout_toRightOf="@id/btnClear"
            android:background="@android:color/white"
            android:text="@string/power"
            android:textColor="@android:color/holo_blue_dark" />

        <Button
            android:id="@+id/btnAllClear"
            style="@style/ButtonDesign"
            android:layout_below="@+id/btnModulus"
            android:background="@android:color/white"
            android:text="@string/clearAll"
            android:textColor="@android:color/holo_red_light" />

        <Button
            android:id="@+id/btnClear"
            style="@style/ButtonDesign"
            android:layout_below="@+id/btnModulus"
            android:layout_toRightOf="@id/btnAllClear"
            android:background="@android:color/white"
            android:text="@string/clear"
            android:textColor="@android:color/holo_red_light" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btnArithmetic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etTextBar"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dp_80"
        android:layout_marginRight="@dimen/dp_15">

        <Button
            android:id="@+id/btnAdd"
            style="@style/ArithmeticButtonDesign"
            android:background="@android:color/white"
            android:text="@string/add" />

        <Button
            android:id="@+id/btnSub"
            style="@style/ArithmeticButtonDesign"
            android:layout_below="@id/btnAdd"
            android:background="@android:color/white"
            android:text="@string/sub" />

        <Button
            android:id="@+id/btnMul"
            style="@style/ArithmeticButtonDesign"
            android:layout_below="@id/btnSub"
            android:background="@android:color/white"
            android:text="@string/mul" />

        <Button
            android:id="@+id/btnDiv"
            style="@style/ArithmeticButtonDesign"
            android:layout_below="@id/btnMul"
            android:background="@android:color/white"
            android:text="@string/div" />

        <Button
            android:id="@+id/btnEqual"
            style="@style/ArithmeticButtonDesign"
            android:layout_below="@id/btnDiv"
            android:background="@android:color/holo_blue_light"
            android:text="@string/equal"
            android:textColor="@android:color/white" />

    </RelativeLayout>


</RelativeLayout>